@@ -1,189 +1,189 @@
-export const langs = {
-    /*aa: "Afaraf",
-    ab:"Аҧсуа",
-    ae: "Avesta",
-    af:"Afrikaans",
-    ak:"Akan",
-    am:"አማርኛ",
-    an:"Aragonés",
-    ar:"العربية",
-    as:"অসমীয়া",
-    av:"авар мацӀ",
-    ay:"Aymar aru",
-    az:"Azərbaycan dili",
-    ba:"башҡорт теле",
-    be:"Беларуская",
-    bg:"български език",
-    bh:"भोजपुरी",
-    bi:"Bislama",
-    bm:"Bamanankan",
-    bn:"বাংলা",
-    bo:"བོད་ཡིག",
-    br:"Brezhoneg",
-    bs:"Bosanski jezik",
-    ca:"Català",
-    ce:"нохчийн мотт",
-    ch:"Chamoru",
-    co:"Corsu",
-    cr:"ᓀᐦᐃᔭᐍᐏᐣ",
-    cs:"Česky",
-    cu:"Словѣньскъ",
-    cv:"чӑваш чӗлхи",
-    cy:"Cymraeg",
-    da:"Dansk",
-    de:"Deutsch",
-    dv:"ދިވެހި",
-    dz:"རྫོང་ཁ",
-    ee:"Ɛʋɛgbɛ",
-    el:"Ελληνικά",*/
-    en:"English",
-    /*eo:"Esperanto",
-    es:"Español",
-    et:"Eesti keel",
-    eu:"Euskara",
-    fa:"فارسی",
-    ff:"Fulfulde",
-    fi:"Suomen kieli",
-    fj:"Vosa Vakaviti",
-    fo:"Føroyskt",*/
-    fr:"Français",
-    /*fy:"Frysk",
-    ga:"Gaeilge",
-    gd:"Gàidhlig",
-    gl:"Galego",
-    gn:"Avañe'ẽ",
-    gu:"ગુજરાતી",
-    gv:"Ghaelg",
-    ha:"هَوُسَ",
-    he:"עברית",
-    hi:"हिन्दी",
-    ho:"Hiri Motu",
-    hr:"Hrvatski",
-    ht:"Kreyòl ayisyen",
-    hu:"magyar",
-    hy:"Հայերեն",
-    hz:"Otjiherero",
-    ia:"Interlingua",
-    id:"Bahasa Indonesia",
-    ie:"Interlingue",
-    ig:"Igbo",
-    ii:"ꆇꉙ",
-    ik:"Iñupiaq",
-    io:"Ido",*/
-    is:"Íslenska",
-    /*it:"Italiano",
-    iu:"ᐃᓄᒃᑎᑐᑦ",
-    ja:"日本語" ,
-    jv:"Basa Jawa",
-    ka:"ქართული",
-    kg:"KiKongo",
-    ki:"Gĩkũyũ",
-    kj:"Kuanyama",
-    kk:"Қазақ тілі",
-    kl:"Kalaallisut",
-    km:"ភាសាខ្មែរ",
-    kn:"ಕನ್ನಡ",
-    ko:"한국어",
-    kr:"Kanuri",
-    ks:"कश्मीरी",
-    ku:"Kurdî",
-    kv:"коми кыв",
-    kw:"Kernewek",
-    ky:"кыргыз тили",
-    la:"Latine",
-    lb:"Lëtzebuergesch",
-    lg:"Luganda",
-    li:"Limburgs",
-    ln:"Lingála",
-    lo:"ພາສາລາວ",
-    lt:"Lietuvių kalba",
-    lu:"tshiluba",
-    lv:"Latviešu valoda",
-    mg:"Fiteny malagasy",
-    mh:"Kajin M̧ajeļ",
-    mi:"Te reo Māori",
-    mk:"македонски јазик",
-    ml:"മലയാളം",
-    mn:"Монгол",
-    mo:"лимба молдовеняскэ",
-    mr:"मराठी",
-    ms:"Bahasa Melayu",
-    mt:"Malti",
-    my:"ဗမာစာ",
-    na:"Ekakairũ Naoero",
-    nb:"Norsk bokmål",
-    nd:"isiNdebele",
-    ne:"नेपाली",
-    ng:"Owambo",
-    nl:"Nederlands",
-    nn:"Norsk nynorsk",
-    no:"Norsk",
-    nr:"Ndébélé",
-    nv:"Diné bizaad ",
-    ny:"ChiCheŵa",
-    oc:"Occitan",
-    oj:"ᐊᓂᔑᓈᐯᒧᐎᓐ",
-    om:"Afaan Oromoo",
-    or:"ଓଡ଼ିଆ",
-    os:"Ирон ӕвзаг",
-    pa:"ਪੰਜਾਬੀ",
-    pi:"पािऴ",
-    pl:"Polski",
-    ps:"پښتو",
-    pt:"Português",
-    qu:"Runa Simi",
-    rc:"Kréol Rénioné",
-    rm:"Rumantsch grischun",
-    rn:"kiRundi",
-    ro:"Română",
-    ru:"русский язык",
-    rw:"Kinyarwanda",
-    sa:"संस्कृतम्",
-    sc:"sardu",
-    sd:"सिन्धी",
-    se:"Davvisámegiella",
-    sg:"Yângâ tî sängö",
-    sh:"srpskohrvatski jezik",
-    si:"සිංහල",
-    sk:"Slovenčina",
-    sl:"Slovenščina",
-    sm:"Gagana fa'a Samoa",
-    sn:"chiShona",
-    so:"Soomaaliga",
-    sq:"Shqip",
-    sr:"српски језик",
-    ss:"SiSwati",
-    st:"seSotho",
-    su:"Basa Sunda",*/
-    sv:"Svenska",
-    /*sw:"Kiswahili",
-    ta:"தமிழ்",
-    te:"తెలుగు",
-    tg:"тоҷикӣ",
-    th:"ไทย",
-    ti:"ትግርኛ",
-    tk:"Türkmen",
-    tl:"Tagalog",
-    tn:"seTswana",
-    to:"faka Tonga",
-    tr:"Türkçe",
-    ts:"xiTsonga",
-    tt:"татарча",
-    tw:"Twi",
-    ty:"Reo Mā`ohi",
-    ug:"Uyƣurqə",
-    uk:"українська мова",
-    ur:"اردو",
-    uz:"O'zbek",
-    ve:"tshiVenḓa",
-    vi:"Tiếng Việt",
-    vo:"Volapük",
-    wa:"Walon",
-    wo:"Wollof",
-    xh:"isiXhosa",
-    yi:"ייִדיש",
-    yo:"Yorùbá",
-    za:"Saɯ cueŋƅ",
-    zh:"中文",
-    zu:"isiZulu",*/
-}
+export const langs: { isoCode: string, originalName: string }[] = [
+//  { isoCode: 'aa', originalName: 'Afaraf' },
+//  { isoCode: 'ab', originalName: 'Аҧсуа' },
+//  { isoCode: 'ae', originalName: 'Avesta' },
+//  { isoCode: 'af', originalName: 'Afrikaans' },
+//  { isoCode: 'ak', originalName: 'Akan' },
+//  { isoCode: 'am', originalName: 'አማርኛ' },
+//  { isoCode: 'an', originalName: 'Aragonés' },
+//  { isoCode: 'ar', originalName: 'العربية' },
+//  { isoCode: 'as', originalName: 'অসমীয়া' },
+//  { isoCode: 'av', originalName: 'авар мацӀ' },
+//  { isoCode: 'ay', originalName: 'Aymar aru' },
+//  { isoCode: 'az', originalName: 'Azərbaycan dili' },
+//  { isoCode: 'ba', originalName: 'башҡорт теле' },
+//  { isoCode: 'be', originalName: 'Беларуская' },
+//  { isoCode: 'bg', originalName: 'български език' },
+//  { isoCode: 'bh', originalName: 'भोजपुरी' },
+//  { isoCode: 'bi', originalName: 'Bislama' },
+//  { isoCode: 'bm', originalName: 'Bamanankan' },
+//  { isoCode: 'bn', originalName: 'বাংলা' },
+//  { isoCode: 'bo', originalName: 'བོད་ཡིག' },
+//  { isoCode: 'br', originalName: 'Brezhoneg' },
+//  { isoCode: 'bs', originalName: 'Bosanski jezik' },
+//  { isoCode: 'ca', originalName: 'Català' },
+//  { isoCode: 'ce', originalName: 'нохчийн мотт' },
+//  { isoCode: 'ch', originalName: 'Chamoru' },
+//  { isoCode: 'co', originalName: 'Corsu' },
+//  { isoCode: 'cr', originalName: 'ᓀᐦᐃᔭᐍᐏᐣ' },
+//  { isoCode: 'cs', originalName: 'Česky' },
+//  { isoCode: 'cu', originalName: 'Словѣньскъ' },
+//  { isoCode: 'cv', originalName: 'чӑваш чӗлхи' },
+//  { isoCode: 'cy', originalName: 'Cymraeg' },
+//  { isoCode: 'da', originalName: 'Dansk' },
+//  { isoCode: 'de', originalName: 'Deutsch' },
+//  { isoCode: 'dv', originalName: 'ދިވެހި' },
+//  { isoCode: 'dz', originalName: 'རྫོང་ཁ' },
+//  { isoCode: 'ee', originalName: 'Ɛʋɛgbɛ' },
+//  { isoCode: 'el', originalName: 'Ελληνικά' },
+  { isoCode: 'en', originalName: 'English'},
+//  { isoCode: 'eo', originalName: 'Esperanto' },
+//  { isoCode: 'es', originalName: 'Español' },
+//  { isoCode: 'et', originalName: 'Eesti keel' },
+//  { isoCode: 'eu', originalName: 'Euskara' },
+//  { isoCode: 'fa', originalName: 'فارسی' },
+//  { isoCode: 'ff', originalName: 'Fulfulde' },
+//  { isoCode: 'fi', originalName: 'Suomen kieli' },
+//  { isoCode: 'fj', originalName: 'Vosa Vakaviti' },
+//  { isoCode: 'fo', originalName: 'Føroyskt' },
+  { isoCode: 'fr', originalName: 'Français' },
+//  { isoCode: 'fy', originalName: 'Frysk' },
+//  { isoCode: 'ga', originalName: 'Gaeilge' },
+//  { isoCode: 'gd', originalName: 'Gàidhlig' },
+//  { isoCode: 'gl', originalName: 'Galego' },
+//  { isoCode: 'gn', originalName: 'Avañe\'ẽ' },
+//  { isoCode: 'gu', originalName: 'ગુજરાતી' },
+//  { isoCode: 'gv', originalName: 'Ghaelg' },
+//  { isoCode: 'ha', originalName: 'هَوُسَ' },
+//  { isoCode: 'he', originalName: 'עברית' },
+//  { isoCode: 'hi', originalName: 'हिन्दी' },
+//  { isoCode: 'ho', originalName: 'Hiri Motu' },
+//  { isoCode: 'hr', originalName: 'Hrvatski' },
+//  { isoCode: 'ht', originalName: 'Kreyòl ayisyen' },
+//  { isoCode: 'hu', originalName: 'magyar' },
+//  { isoCode: 'hy', originalName: 'Հայերեն' },
+//  { isoCode: 'hz', originalName: 'Otjiherero' },
+//  { isoCode: 'ia', originalName: 'Interlingua' },
+//  { isoCode: 'id', originalName: 'Bahasa Indonesia' },
+//  { isoCode: 'ie', originalName: 'Interlingue' },
+//  { isoCode: 'ig', originalName: 'Igbo' },
+//  { isoCode: 'ii', originalName: 'ꆇꉙ' },
+//  { isoCode: 'ik', originalName: 'Iñupiaq' },
+//  { isoCode: 'io', originalName: 'Ido' },
+  { isoCode: 'is', originalName: 'Íslenska' },
+//  { isoCode: 'it', originalName: 'Italiano' },
+//  { isoCode: 'iu', originalName: 'ᐃᓄᒃᑎᑐᑦ' },
+//  { isoCode: 'ja', originalName: '日本語' },
+//  { isoCode: 'jv', originalName: 'Basa Jawa' },
+//  { isoCode: 'ka', originalName: 'ქართული' },
+//  { isoCode: 'kg', originalName: 'KiKongo' },
+//  { isoCode: 'ki', originalName: 'Gĩkũyũ' },
+//  { isoCode: 'kj', originalName: 'Kuanyama' },
+//  { isoCode: 'kk', originalName: 'Қазақ тілі' },
+//  { isoCode: 'kl', originalName: 'Kalaallisut' },
+//  { isoCode: 'km', originalName: 'ភាសាខ្មែរ' },
+//  { isoCode: 'kn', originalName: 'ಕನ್ನಡ' },
+//  { isoCode: 'ko', originalName: '한국어' },
+//  { isoCode: 'kr', originalName: 'Kanuri' },
+//  { isoCode: 'ks', originalName: 'कश्मीरी' },
+//  { isoCode: 'ku', originalName: 'Kurdî' },
+//  { isoCode: 'kv', originalName: 'коми кыв' },
+//  { isoCode: 'kw', originalName: 'Kernewek' },
+//  { isoCode: 'ky', originalName: 'кыргыз тили' },
+//  { isoCode: 'la', originalName: 'Latine' },
+//  { isoCode: 'lb', originalName: 'Lëtzebuergesch' },
+//  { isoCode: 'lg', originalName: 'Luganda' },
+//  { isoCode: 'li', originalName: 'Limburgs' },
+//  { isoCode: 'ln', originalName: 'Lingála' },
+//  { isoCode: 'lo', originalName: 'ພາສາລາວ' },
+//  { isoCode: 'lt', originalName: 'Lietuvių kalba' },
+//  { isoCode: 'lu', originalName: 'tshiluba' },
+//  { isoCode: 'lv', originalName: 'Latviešu valoda' },
+//  { isoCode: 'mg', originalName: 'Fiteny malagasy' },
+//  { isoCode: 'mh', originalName: 'Kajin M̧ajeļ' },
+//  { isoCode: 'mi', originalName: 'Te reo Māori' },
+//  { isoCode: 'mk', originalName: 'македонски јазик' },
+//  { isoCode: 'ml', originalName: 'മലയാളം' },
+//  { isoCode: 'mn', originalName: 'Монгол' },
+//  { isoCode: 'mo', originalName: 'лимба молдовеняскэ' },
+//  { isoCode: 'mr', originalName: 'मराठी' },
+//  { isoCode: 'ms', originalName: 'Bahasa Melayu' },
+//  { isoCode: 'mt', originalName: 'Malti' },
+//  { isoCode: 'my', originalName: 'ဗမာစာ' },
+//  { isoCode: 'na', originalName: 'Ekakairũ Naoero' },
+//  { isoCode: 'nb', originalName: 'Norsk bokmål' },
+//  { isoCode: 'nd', originalName: 'isiNdebele' },
+//  { isoCode: 'ne', originalName: 'नेपाली' },
+//  { isoCode: 'ng', originalName: 'Owambo' },
+//  { isoCode: 'nl', originalName: 'Nederlands' },
+//  { isoCode: 'nn', originalName: 'Norsk nynorsk' },
+//  { isoCode: 'no', originalName: 'Norsk' },
+//  { isoCode: 'nr', originalName: 'Ndébélé' },
+//  { isoCode: 'nv', originalName: 'Diné bizaad ' },
+//  { isoCode: 'ny', originalName: 'ChiCheŵa' },
+//  { isoCode: 'oc', originalName: 'Occitan' },
+//  { isoCode: 'oj', originalName: 'ᐊᓂᔑᓈᐯᒧᐎᓐ' },
+//  { isoCode: 'om', originalName: 'Afaan Oromoo' },
+//  { isoCode: 'or', originalName: 'ଓଡ଼ିଆ' },
+//  { isoCode: 'os', originalName: 'Ирон ӕвзаг' },
+//  { isoCode: 'pa', originalName: 'ਪੰਜਾਬੀ' },
+//  { isoCode: 'pi', originalName: 'पािऴ' },
+//  { isoCode: 'pl', originalName: 'Polski' },
+//  { isoCode: 'ps', originalName: 'پښتو' },
+//  { isoCode: 'pt', originalName: 'Português' },
+//  { isoCode: 'qu', originalName: 'Runa Simi' },
+//  { isoCode: 'rc', originalName: 'Kréol Rénioné' },
+//  { isoCode: 'rm', originalName: 'Rumantsch grischun' },
+//  { isoCode: 'rn', originalName: 'kiRundi' },
+//  { isoCode: 'ro', originalName: 'Română' },
+//  { isoCode: 'ru', originalName: 'русский язык' },
+//  { isoCode: 'rw', originalName: 'Kinyarwanda' },
+//  { isoCode: 'sa', originalName: 'संस्कृतम्' },
+//  { isoCode: 'sc', originalName: 'sardu' },
+//  { isoCode: 'sd', originalName: 'सिन्धी' },
+//  { isoCode: 'se', originalName: 'Davvisámegiella' },
+//  { isoCode: 'sg', originalName: 'Yângâ tî sängö' },
+//  { isoCode: 'sh', originalName: 'srpskohrvatski jezik' },
+//  { isoCode: 'si', originalName: 'සිංහල' },
+//  { isoCode: 'sk', originalName: 'Slovenčina' },
+//  { isoCode: 'sl', originalName: 'Slovenščina' },
+//  { isoCode: 'sm', originalName: 'Gagana fa\'a Samoa' },
+//  { isoCode: 'sn', originalName: 'chiShona' },
+//  { isoCode: 'so', originalName: 'Soomaaliga' },
+//  { isoCode: 'sq', originalName: 'Shqip' },
+//  { isoCode: 'sr', originalName: 'српски језик' },
+//  { isoCode: 'ss', originalName: 'SiSwati' },
+//  { isoCode: 'st', originalName: 'seSotho' },
+//  { isoCode: 'su', originalName: 'Basa Sunda' },
+  { isoCode: 'sv', originalName: 'Svenska' },
+//  { isoCode: 'sw', originalName: 'Kiswahili' },
+//  { isoCode: 'ta', originalName: 'தமிழ்' },
+//  { isoCode: 'te', originalName: 'తెలుగు' },
+//  { isoCode: 'tg', originalName: 'тоҷикӣ' },
+//  { isoCode: 'th', originalName: 'ไทย' },
+//  { isoCode: 'ti', originalName: 'ትግርኛ' },
+//  { isoCode: 'tk', originalName: 'Türkmen' },
+//  { isoCode: 'tl', originalName: 'Tagalog' },
+//  { isoCode: 'tn', originalName: 'seTswana' },
+//  { isoCode: 'to', originalName: 'faka Tonga' },
+//  { isoCode: 'tr', originalName: 'Türkçe' },
+//  { isoCode: 'ts', originalName: 'xiTsonga' },
+//  { isoCode: 'tt', originalName: 'татарча' },
+//  { isoCode: 'tw', originalName: 'Twi' },
+//  { isoCode: 'ty', originalName: 'Reo Mā`ohi' },
+//  { isoCode: 'ug', originalName: 'Uyƣurqə' },
+//  { isoCode: 'uk', originalName: 'українська мова' },
+//  { isoCode: 'ur', originalName: 'اردو' },
+//  { isoCode: 'uz', originalName: 'O\'zbek' },
+//  { isoCode: 've', originalName: 'tshiVenḓa' },
+//  { isoCode: 'vi', originalName: 'Tiếng Việt' },
+//  { isoCode: 'vo', originalName: 'Volapük' },
+//  { isoCode: 'wa', originalName: 'Walon' },
+//  { isoCode: 'wo', originalName: 'Wollof' },
+//  { isoCode: 'xh', originalName: 'isiXhosa' },
+//  { isoCode: 'yi', originalName: 'ייִדיש' },
+//  { isoCode: 'yo', originalName: 'Yorùbá' },
+//  { isoCode: 'za', originalName: 'Saɯ cueŋƅ' },
+//  { isoCode: 'zh', originalName: '中文' },
+//  { isoCode: 'zu', originalName: 'isiZulu' }
+];
